# meteo_utils

./: .gitignore  CITATION.cff  README.md  environment.yml  process_cams.py  process_era5.py  process_era5_edh.py  pyproject.toml  requirements.txt  setup.py
meteo_utils/: dem_utils.py  ecmwf_nrt_utils.py  ecmwf_utils.py  gdal_utils.py  solar_irradiance.py
test/: 20210112_cams.nc  20210112_era5.nc  20210612_cams.grib  20210612_era5.grib
test/test_cams/: 20200620T1215_AOT.tif  20200620T1215_EA.tif  20200620T1215_LW-IN.tif  20200620T1215_NIR-DIF.tif  20200620T1215_NIR-DIR.tif  20200620T1215_PA.tif  20200620T1215_PAR-DIF.tif  20200620T1215_PAR-DIR.tif  20200620T1215_TA.tif  20200620T1215_TCWV.tif  20200620T1215_WS.tif  20200620_LEVEL2_ECMWF_CAMS.grib  20200620_LEVEL2_ECMWF_CAMS.grib.417bb.idx  20200620_SW-IN-DD-flat.tif  20200620_SW-IN-DD.tif
test/test_era5/: 20200620T1200_AOT.tif  20200620T1200_EA.tif  20200620T1200_LW-IN.tif  20200620T1200_NIR-DIF.tif  20200620T1200_NIR-DIR.tif  20200620T1200_PA.tif  20200620T1200_PAR-DIF.tif  20200620T1200_PAR-DIR.tif  20200620T1200_TA.tif  20200620T1200_TCWV.tif  20200620T1200_WS.tif  20200620_LEVEL2_ECMWF_CAMS.grib  20200620_LEVEL2_ECMWF_CAMS.grib.417bb.idx  20200620_LEVEL2_ECMWF_ERA5.grib  20200620_LEVEL2_ECMWF_ERA5.grib.417bb.idx  20200620_SW-IN-DD-flat.tif  20200620_SW-IN-DD.tif  20210612_flat.tif.aux.xml
test_cams/: 20210612_cams.grib  20210612_cams.grib.417bb.idx  20210612_cams.nc
